--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyundai</title>
+    <title>Honda r2</title>
     <!-- SEO Meta Tags-->
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -75,11 +75,11 @@
           href="index.html"
           ><img
             class="d-none d-lg-block"
-            src="images/logo-hyundai-1.png"
+            src="images/honda.svg"
             alt="Logo Hyundai"
             width="153" /><img
             class="d-lg-none"
-            src="images/logo-hyundai-1.png"
+            src="images/honda.svg"
             alt="Honda Hyundai"
             width="58"
         /></a>
@@ -250,6 +250,439 @@
                 We possess SSL / Secure сertificate
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="position-relative bg-gradient pt-5 pt-lg-6 pb-7 mb-7">
+      <h1 class="text-center mb-5 text-light">Pilih Motor Favorit Anda</h1>
+      <div class="shape shape-bottom shape-curve bg-body">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3000 185.4">
+          <path
+            fill="currentColor"
+            d="M3000,0v185.4H0V0c496.4,115.6,996.4,173.4,1500,173.4S2503.6,115.6,3000,0z"
+          ></path>
+        </svg>
+      </div>
+
+      <!-- Tabs-->
+      <div class="container pb-7">
+        <div class="row align-items-center pb-7">
+          <div class="col-lg-3">
+            <ul
+              class="nav nav-tabs media-tabs media-tabs-light justify-content-center justify-content-lg-start pb-3 mb-4 pb-lg-0 mb-lg-0"
+              role="tablist"
+            >
+              <li class="nav-item me-3 mb-3">
+                <a
+                  class="nav-link active"
+                  href="#matic"
+                  data-bs-toggle="tab"
+                  role="tab"
+                >
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="flex-shrink-0 rounded"
+                      src="images/matic-thumb.webp"
+                      alt="Product"
+                      width="60"
+                    />
+                    <div class="w-100 ps-2 ms-1">
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div class="fs-sm pe-1">MATIC</div>
+                        <i class="ai-chevron-right lead ms-2 me-1"></i>
+                      </div>
+                    </div></div
+                ></a>
+              </li>
+              <li class="nav-item me-3 mb-3">
+                <a
+                  class="nav-link"
+                  href="#sport"
+                  data-bs-toggle="tab"
+                  role="tab"
+                >
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="flex-shrink-0 rounded"
+                      src="images/sport-thumb.webp"
+                      alt="Product"
+                      width="60"
+                    />
+                    <div class="w-100 ps-2 ms-1">
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div class="fs-sm pe-1">SPORT</div>
+                        <i class="ai-chevron-right lead ms-2 me-1"></i>
+                      </div>
+                    </div></div
+                ></a>
+              </li>
+              <li class="nav-item me-3 mb-3">
+                <a class="nav-link" href="#cub" data-bs-toggle="tab" role="tab">
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="flex-shrink-0 rounded"
+                      src="images/cub-thumb.webp"
+                      alt="Product"
+                      width="60"
+                    />
+                    <div class="w-100 ps-2 ms-1">
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div class="fs-sm pe-1">CUB</div>
+                        <i class="ai-chevron-right lead ms-2 me-1"></i>
+                      </div>
+                    </div></div
+                ></a>
+              </li>
+              <li class="nav-item me-3 mb-3">
+                <a class="nav-link" href="#ev" data-bs-toggle="tab" role="tab">
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="flex-shrink-0 rounded"
+                      src="images/ev-thumb.webp"
+                      alt="Product"
+                      width="60"
+                    />
+                    <div class="w-100 ps-2 ms-1">
+                      <div
+                        class="d-flex justify-content-between align-items-center"
+                      >
+                        <div class="fs-sm pe-1">EV</div>
+                        <i class="ai-chevron-right lead ms-2 me-1"></i>
+                      </div>
+                    </div></div
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-9">
+            <div class="tab-content">
+              <div class="tab-pane fade show active" id="matic">
+                <div class="row align-items-center">
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Beat.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">BeAT</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 18,430,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Beat Street.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">BeAT Street</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 19,300,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Genio.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">Genio</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 19,575,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Beat.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">Scoopy</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 22,525,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade " id="sport">
+                <div class="row align-items-center">
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/CB150 Verza.webp"                        
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">CB150 Verza</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 22,160,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Sonic 150R.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">Sonic 150R</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 27,040,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/CB150R Streetfire.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">CB150R Streetfire</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 31,780,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/CB150X.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">CB150X</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 34,520,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade " id="cub">
+                <div class="row align-items-center">
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Revo.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">Revo</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 16,535,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Supra X 125 FI.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">Supra X 125 FI</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 19,900,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/GTR 150.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">GTR 150</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 25,915,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Supercub C125.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">Supercub C125</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 77,665,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade " id="ev">
+                <div class="row align-items-center">
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/Beat.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">ICON e:</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 28,000,000 - 32,000,000*</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/EM1.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">EM1 e: & EM1 e: PLUS</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 40,000,000</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+                  <div class="col-lg-3 col-sm-6 mb-grid-gutter">
+                    <a
+                      class="card card-hover border-0 shadow mx-auto"
+                      href="#"
+                      style="max-width: 400px"
+                      ><img
+                        class="card-img-top"
+                        src="images/CUV3.webp"
+                        alt="Life Science"
+                      />
+                      <div class="card-body">
+                        <h3 class="h5 mb-3">CUV e: & CUV e: RoadSync Duo</h3>
+                        <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
+                        <p class="h5 fw-bold">Rp. 53,000,000 - 61,000,000*</p>
+                        <button class="btn-outline-primary rounded">
+                          Selengkapnya
+                        </button>
+                      </div></a
+                    >
+                  </div>
+               
+                </div>
+              </div>
+
+             
           </div>
         </div>
       </div>
