--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       data-scroll-header=""
       data-fixed-element=""
     >
-      <div class="container px-0 px-xl-3">
+      <div class="container px-0 py-3 px-xl-3">
         <button
           class="navbar-toggler ms-n2 me-2"
           type="button"
@@ -83,47 +83,6 @@
             alt="Honda Hyundai"
             width="58"
         /></a>
-
-        <div class="offcanvas offcanvas-collapse order-lg-2" id="primaryMenu">
-          <div class="offcanvas-header navbar-shadow">
-            <h5 class="mt-1 mb-0">Menu</h5>
-            <button
-              class="btn-close lead"
-              type="button"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <!-- Menu-->
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown dropdown-mega">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  data-bs-toggle="dropdown"
-                  >Vehicles</a
-                >
-              </li>
-              <li class="nav-item dropdown dropdown-mega">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  data-bs-toggle="dropdown"
-                  >Shopping Tools</a
-                >
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  data-bs-toggle="dropdown"
-                  >Experience</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
     </header>
     <!-- Hero slider -->
@@ -135,67 +94,28 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="images/car-hero (1).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero1.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (2).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero2.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (3).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero3.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (4).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero4.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (5).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero5.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (6).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero6.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (7).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero7.webp" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img
-              src="images/car-hero (8).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="images/car-hero (9).jpg"
-              class="d-block w-100"
-              alt="..."
-            />
+            <img src="images/hero8.webp" class="d-block w-100" alt="..." />
           </div>
         </div>
       </div>
@@ -274,7 +194,7 @@
               class="nav nav-tabs media-tabs media-tabs-light justify-content-center justify-content-lg-start pb-3 mb-4 pb-lg-0 mb-lg-0"
               role="tablist"
             >
-              <li class="nav-item me-3 mb-3">
+              <li class="nav-item me-3 mb-3" style="width: 200px">
                 <a
                   class="nav-link active"
                   href="#matic"
@@ -298,7 +218,7 @@
                     </div></div
                 ></a>
               </li>
-              <li class="nav-item me-3 mb-3">
+              <li class="nav-item me-3 mb-3" style="width: 200px">
                 <a
                   class="nav-link"
                   href="#sport"
@@ -322,7 +242,7 @@
                     </div></div
                 ></a>
               </li>
-              <li class="nav-item me-3 mb-3">
+              <li class="nav-item me-3 mb-3" style="width: 200px">
                 <a class="nav-link" href="#cub" data-bs-toggle="tab" role="tab">
                   <div class="d-flex align-items-center">
                     <img
@@ -341,7 +261,7 @@
                     </div></div
                 ></a>
               </li>
-              <li class="nav-item me-3 mb-3">
+              <li class="nav-item me-3 mb-3" style="width: 200px">
                 <a class="nav-link" href="#ev" data-bs-toggle="tab" role="tab">
                   <div class="d-flex align-items-center">
                     <img
@@ -448,7 +368,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane fade " id="sport">
+              <div class="tab-pane fade" id="sport">
                 <div class="row align-items-center">
                   <div class="col-lg-3 col-sm-6 mb-grid-gutter">
                     <a
@@ -457,7 +377,7 @@
                       style="max-width: 400px"
                       ><img
                         class="card-img-top"
-                        src="images/CB150 Verza.webp"                        
+                        src="images/CB150 Verza.webp"
                         alt="Life Science"
                       />
                       <div class="card-body">
@@ -532,7 +452,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane fade " id="cub">
+              <div class="tab-pane fade" id="cub">
                 <div class="row align-items-center">
                   <div class="col-lg-3 col-sm-6 mb-grid-gutter">
                     <a
@@ -545,7 +465,7 @@
                         alt="Life Science"
                       />
                       <div class="card-body">
-                        <h3 class="h5 mb-3">Revo</h3>
+                        <h3 class="h5 mb-3">REVO</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 16,535,000</p>
                         <button class="btn-outline-primary rounded">
@@ -616,7 +536,7 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane fade " id="ev">
+              <div class="tab-pane fade" id="ev">
                 <div class="row align-items-center">
                   <div class="col-lg-3 col-sm-6 mb-grid-gutter">
                     <a
@@ -678,127 +598,124 @@
                       </div></a
                     >
                   </div>
-               
                 </div>
               </div>
-
-             
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Galery Car -->
-    <section>
-      <section class="bg-secondary py-5 py-md-6 mt-n4">
-        <div class="container py-2">
-          <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-10 text-center">
-              <h2>Vehicles</h2>
-              <p class="text-muted mb-5 pb-2">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam eaque ipsa
-                quae
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-              <a
-                class="card card-hover border-0 shadow mx-auto"
-                href="#"
-                style="max-width: 400px"
-                ><img
-                  class="card-img-top"
-                  src="https://hyundaimobil.co.id//storage/vehicles/August2023/CZsZxI6o6lCdN6b8wwNG.png"
-                  alt="Life Science"
-                />
-                <div class="card-body">
-                  <h3 class="h5 mb-0">Life Science</h3>
-                </div></a
-              >
-            </div>
-            <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-              <a
-                class="card card-hover border-0 shadow mx-auto"
-                href="#"
-                style="max-width: 400px"
-                ><img
-                  class="card-img-top"
-                  src="https://hyundaimobil.co.id//storage/vehicles/August2023/eRjY0sxfFZuEy7Pm6adT.png"
-                  alt="Technology"
-                />
-                <div class="card-body">
-                  <h3 class="h5 mb-0">Technology</h3>
-                </div></a
-              >
-            </div>
-            <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-              <a
-                class="card card-hover border-0 shadow mx-auto"
-                href="#"
-                style="max-width: 400px"
-                ><img
-                  class="card-img-top"
-                  src="https://hyundaimobil.co.id//storage/vehicles/August2023/CZsZxI6o6lCdN6b8wwNG.png"
-                  alt="Healthcare"
-                />
-                <div class="card-body">
-                  <h3 class="h5 mb-0">Healthcare</h3>
-                </div></a
-              >
-            </div>
-            <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-              <a
-                class="card card-hover border-0 shadow mx-auto"
-                href="#"
-                style="max-width: 400px"
-                ><img
-                  class="card-img-top"
-                  src="https://hyundaimobil.co.id//storage/vehicles/August2023/pq3ONkc8LvUI4MknU5Oa.png"
-                  alt="Natural Resources"
-                />
-                <div class="card-body">
-                  <h3 class="h5 mb-0">Natural Resources</h3>
-                </div></a
-              >
-            </div>
-            <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-              <a
-                class="card card-hover border-0 shadow mx-auto"
-                href="#"
-                style="max-width: 400px"
-                ><img
-                  class="card-img-top"
-                  src="https://hyundaimobil.co.id//storage/vehicles/August2023/tsmRQupSzNFp7zHrleQV.png"
-                  alt="Freight &amp; Logistics"
-                />
-                <div class="card-body">
-                  <h3 class="h5 mb-0">Freight &amp; Logistics</h3>
-                </div></a
-              >
-            </div>
-            <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-              <a
-                class="card card-hover border-0 shadow mx-auto"
-                href="#"
-                style="max-width: 400px"
-                ><img
-                  class="card-img-top"
-                  src="https://hyundaimobil.co.id//storage/vehicles/August2023/hFgnofTxxSJGzAc5Go2O.png"
-                  alt="Retail"
-                />
-                <div class="card-body">
-                  <h3 class="h5 mb-0">Retail</h3>
-                </div></a
-              >
-            </div>
-          </div>
-          <div class="pt-3 text-center">
-            <a class="btn btn-primary" href="#">See all Cars</a>
+
+    <section class="bg-secondary py-5 py-md-6 mt-n4">
+      <div class="container py-2">
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-md-8 col-sm-10 text-center">
+            <h2>Vehicles</h2>
+            <p class="text-muted mb-5 pb-2">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium doloremque laudantium, totam rem aperiam eaque ipsa
+              quae
+            </p>
           </div>
         </div>
-      </section>
+        <div class="row">
+          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
+            <a
+              class="card card-hover border-0 shadow mx-auto"
+              href="#"
+              style="max-width: 400px"
+              ><img
+                class="card-img-top"
+                src="https://hyundaimobil.co.id//storage/vehicles/August2023/CZsZxI6o6lCdN6b8wwNG.png"
+                alt="Life Science"
+              />
+              <div class="card-body">
+                <h3 class="h5 mb-0">Life Science</h3>
+              </div></a
+            >
+          </div>
+          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
+            <a
+              class="card card-hover border-0 shadow mx-auto"
+              href="#"
+              style="max-width: 400px"
+              ><img
+                class="card-img-top"
+                src="https://hyundaimobil.co.id//storage/vehicles/August2023/eRjY0sxfFZuEy7Pm6adT.png"
+                alt="Technology"
+              />
+              <div class="card-body">
+                <h3 class="h5 mb-0">Technology</h3>
+              </div></a
+            >
+          </div>
+          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
+            <a
+              class="card card-hover border-0 shadow mx-auto"
+              href="#"
+              style="max-width: 400px"
+              ><img
+                class="card-img-top"
+                src="https://hyundaimobil.co.id//storage/vehicles/August2023/CZsZxI6o6lCdN6b8wwNG.png"
+                alt="Healthcare"
+              />
+              <div class="card-body">
+                <h3 class="h5 mb-0">Healthcare</h3>
+              </div></a
+            >
+          </div>
+          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
+            <a
+              class="card card-hover border-0 shadow mx-auto"
+              href="#"
+              style="max-width: 400px"
+              ><img
+                class="card-img-top"
+                src="https://hyundaimobil.co.id//storage/vehicles/August2023/pq3ONkc8LvUI4MknU5Oa.png"
+                alt="Natural Resources"
+              />
+              <div class="card-body">
+                <h3 class="h5 mb-0">Natural Resources</h3>
+              </div></a
+            >
+          </div>
+          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
+            <a
+              class="card card-hover border-0 shadow mx-auto"
+              href="#"
+              style="max-width: 400px"
+              ><img
+                class="card-img-top"
+                src="https://hyundaimobil.co.id//storage/vehicles/August2023/tsmRQupSzNFp7zHrleQV.png"
+                alt="Freight &amp; Logistics"
+              />
+              <div class="card-body">
+                <h3 class="h5 mb-0">Freight &amp; Logistics</h3>
+              </div></a
+            >
+          </div>
+          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
+            <a
+              class="card card-hover border-0 shadow mx-auto"
+              href="#"
+              style="max-width: 400px"
+              ><img
+                class="card-img-top"
+                src="https://hyundaimobil.co.id//storage/vehicles/August2023/hFgnofTxxSJGzAc5Go2O.png"
+                alt="Retail"
+              />
+              <div class="card-body">
+                <h3 class="h5 mb-0">Retail</h3>
+              </div></a
+            >
+          </div>
+        </div>
+        <div class="pt-3 text-center">
+          <a class="btn btn-primary" href="#">See all Cars</a>
+        </div>
+      </div>
     </section>
 
     <section class="container pt-5 pb-4 py-md-6 pt-lg-7">
