--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+
+  <style>
+    .bg-honda {
+      background-color: #e61b33;
+      color: #ffffff;
+    }
+
+    .bg-dark-honda {
+      background-color: #282828;
+      color: #ffffff;
+    }
+
+    .btn-dark-honda {
+      background-color: #282828;
+      color: #ffffff;
+    }
+
+    .btn-dark-honda:hover {
+      background-color: #e61b33;
+      color: #ffffff;
+    }
+  </style>
   <body>
     <!-- Header -->
     <header
@@ -120,7 +142,7 @@
         </div>
       </div>
     </section>
-    <section class="bg-primary ps-lg-5 pb-4 mb-2 pt-5 py-md-5">
+    <!-- <section class="bg-primary ps-lg-5 pb-4 mb-2 pt-5 py-md-5">
       <div class="row">
         <div class="col">
           <div class="d-flex align-items-center">
@@ -173,9 +195,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="position-relative bg-gradient pt-5 pt-lg-6 pb-7 mb-7">
+    <section class="position-relative bg-honda pt-5 pt-lg-6 pb-7 mb-7">
       <h1 class="text-center mb-5 text-light">Pilih Motor Favorit Anda</h1>
       <div class="shape shape-bottom shape-curve bg-body">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3000 185.4">
@@ -300,7 +322,7 @@
                         <h3 class="h5 mb-3">BeAT</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 18,430,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -320,7 +342,7 @@
                         <h3 class="h5 mb-3">BeAT Street</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 19,300,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -340,7 +362,7 @@
                         <h3 class="h5 mb-3">Genio</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 19,575,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -360,7 +382,7 @@
                         <h3 class="h5 mb-3">Scoopy</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 22,525,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -384,7 +406,7 @@
                         <h3 class="h5 mb-3">CB150 Verza</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 22,160,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -404,7 +426,7 @@
                         <h3 class="h5 mb-3">Sonic 150R</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 27,040,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -424,7 +446,7 @@
                         <h3 class="h5 mb-3">CB150R Streetfire</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 31,780,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -444,7 +466,7 @@
                         <h3 class="h5 mb-3">CB150X</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 34,520,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -468,7 +490,7 @@
                         <h3 class="h5 mb-3">REVO</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 16,535,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -488,7 +510,7 @@
                         <h3 class="h5 mb-3">Supra X 125 FI</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 19,900,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -508,7 +530,7 @@
                         <h3 class="h5 mb-3">GTR 150</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 25,915,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -528,7 +550,7 @@
                         <h3 class="h5 mb-3">Supercub C125</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 77,665,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -552,7 +574,7 @@
                         <h3 class="h5 mb-3">ICON e:</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 28,000,000 - 32,000,000*</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -572,7 +594,7 @@
                         <h3 class="h5 mb-3">EM1 e: & EM1 e: PLUS</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 40,000,000</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -592,7 +614,7 @@
                         <h3 class="h5 mb-3">CUV e: & CUV e: RoadSync Duo</h3>
                         <p class="fs-sm text-black-50 mb-0">Harga mulai</p>
                         <p class="h5 fw-bold">Rp. 53,000,000 - 61,000,000*</p>
-                        <button class="btn-outline-primary rounded">
+                        <button class="btn btn-dark-honda rounded">
                           Selengkapnya
                         </button>
                       </div></a
@@ -864,14 +886,14 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer bg-secondary pt-5 pt-md-6 pt-lg-7">
+    <footer class="footer bg-dark-honda pt-5 pt-md-6 pt-lg-7">
       <div class="container py-3 pt-md-0">
         <div class="row pb-2 pb-md-5">
           <form
             class="col-xl-6 col-lg-7 col-md-7 needs-validation mb-5"
             novalidate=""
           >
-            <h2 class="pb-4">What car are you looking for?</h2>
+            <h2 class="pb-4 text-light">What car are you looking for?</h2>
 
             <div class="input-group mb-3">
               <i
@@ -905,39 +927,44 @@
             </div>
             <div class="row pt-2">
               <div class="col-lg-6 col-md-8">
-                <button class="btn btn-primary btn-block" type="submit">
+                <button
+                  class="btn btn-primary bg-honda btn-block"
+                  type="submit"
+                >
                   Send Request
                 </button>
               </div>
             </div>
           </form>
           <div class="col-xl-3 col-lg-4 offset-xl-3 offset-lg-1 col-md-5 mb-5">
-            <h2 class="pb-2">Contacts</h2>
+            <h2 class="pb-2 text-light">Contacts</h2>
             <ul class="list-unstyled fs-sm mb-4 pb-2">
               <li>
-                <a class="nav-link-style" href="mailto:contact@example.com"
+                <a
+                  class="nav-link-style text-light"
+                  href="mailto:contact@example.com"
                   >contact@example.com</a
                 >
               </li>
               <li>
-                <a class="nav-link-style" href="tel:+15262200459"
+                <a class="nav-link-style text-light" href="tel:+15262200459"
                   >+ 1 526 220 0459</a
                 >
               </li>
             </ul>
-            <h3 class="h6 pb-2">Or connect with us on:</h3>
+            <h3 class="h6 pb-2 text-light">Or connect with us on:</h3>
             <a
-              class="btn-social bs-outline bs-facebook bs-lg me-2 mb-2"
+              class="btn-social bs-outline text-light bs-facebook bs-lg me-2 mb-2"
               href="#"
               ><i class="bi bi-facebook"></i></a
             ><a
-              class="btn-social bs-outline bs-twitter bs-lg me-2 mb-2"
+              class="btn-social bs-outline text-light bs-twitter bs-lg me-2 mb-2"
               href="#"
               ><i class="bi bi-twitter"></i></a
             ><a
-              class="btn-social bs-outline bs-instagram bs-lg me-2 mb-2"
+              class="btn-social bs-outline text-light bs-instagram bs-lg me-2 mb-2"
               href="#"
-              ><i class="bi bi-instagram"></i
+              ><i class="bi bi-instagram text-light"></i
             ></a>
           </div>
         </div>
