--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                       <div
                         class="d-flex justify-content-between align-items-center"
                       >
-                        <div class="fs-sm pe-1">MATIC</div>
+                        <div class="fs-sm fw-medium pe-1">MATIC</div>
                         <i class="ai-chevron-right lead ms-2 me-1"></i>
                       </div>
                     </div></div
